--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
@@ -22,6 +23,7 @@
     "react": "19.1.0",
     "react-datepicker": "^8.8.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
